fixing alignment, and its bed time now

--- a/CSS/resume.css
+++ b/CSS/resume.css
@@ -17,12 +17,11 @@
 .skill-title {
   position: absolute;
   margin: auto;
-  top: 90px; left: 0; right: 0; bottom: 0;
+  top: 75px; left: 0; right: 0; bottom: 0;
   height: 100px;
   font: 16px 'Open Sans', sans-serif;
   text-transform: uppercase;
   text-align: center;
-
 }
 
 .skillGraph {
